--- a/core/core.css
+++ b/core/core.css
@@ -7,23 +7,18 @@
 	padding: 10px;
 }
 
-.player {
-	border-left: 3px solid lightgreen;
-	border-right: 3px solid lightcoral;
-}
-
 #player1 {
 	position: absolute;
 	bottom: 0;
-	left: 110px;
-	right: 110px;
+	left: 0;
+	right: 0;
 }
 
 #player2 {
 	position: absolute;
 	top: 0;
-	left: 110px;
-	right: 110px;
+	left: 0;
+	right: 0;
 }
 
 #player3 {
@@ -33,6 +28,7 @@
 	top: 110px;
 	vertical-align: middle;
 	width: 110px;
+	display: none;
 }
 
 #player4 {
@@ -42,5 +38,6 @@
 	right: 0;
 	vertical-align: middle;
 	width: 110px;
+	display: none;
 }
 
